feat: add avatar, bio, gender
